# adventofcode

./: .editorconfig  CMakeLists.txt  README.md  aoc.DotSettings
2015/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp
2016/: CMakeLists.txt
2017/: CMakeLists.txt  day23.cpp  day24.cpp  day25.cpp
2018/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day16.cpp  day18.cpp  day19.cpp
2019/: CMakeLists.txt
2020/: CMakeLists.txt
2021/: CMakeLists.txt
2022/: CMakeLists.txt  day09.cpp
2023/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp
2024/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
2025/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day10.cpp
app/: CMakeLists.txt  aoc.h  main.cpp  tester.cpp
cmake/: AdventOfCode.cmake  CMakeLists.txt.in
doc/: index.dox
lib/: CMakeLists.txt
lib/aoc/: algorithm.h  core.h  orbit_structure.h  string_helpers.cpp  string_helpers.h  vector.cpp  vector.h
tests/: CMakeLists.txt  test_algorithm.cpp  test_split.cpp
